--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-img"><img src="assets/img/portfolioweb/ajax.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/portfolioweb/ajax.JPG" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Ajax Search Plugin</h4>
               <p>Ajax Search Plugin for Woocommerce<br> products</p>
@@ -230,7 +230,7 @@
             <div class="portfolio-info">
               <h4>Business Website</h4>
               <p>Saifi Engineering Services</p>
-              <a href="assets/img/portfolioweb/ses.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Business Website"><i class="bx bx-plus"></i><a href="https:www.saifiengg.com" class="view-code-button">Visit Site</a></a>
+              <a href="assets/img/portfolioweb/ses.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Business Website"><i class="bx bx-plus"></i><a href="https://www.saifiengg.com/" class="view-code-button">Visit Site</a></a>
             </div>
           </div>
 
