--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolioweb/cf7.png"  class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/portfolioweb/solarweb.png"  class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Solar Website</h4>
               <p>Solar: Renewable Energy Business</p>
-              <a href="assets/img/portfolioweb/solarweb.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Contact Form 7"><i class="bx bx-plus"></i><a href="https://github.com/TubaSaif/Contact-Form-7" class="view-code-button">View Code</a></a>
+              <a href="assets/img/portfolioweb/solarweb.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Solar: Renewable Energy Business Website"><i class="bx bx-plus"></i></a>
             </div>
           </div>
 
